2002-09-04  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.in (AC_OUTPUT): Add intl/Makefile.

2002-09-04  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_OUTPUT): Add m4/Makefile.

1998-06-02  Raja R Harinath  <harinath@cs.umn.edu>

	* configure.in: Change all [ ... ] to test ....  Also `test -e' is
	not portable.  Use `test -f' instead.

-------------------------------------------------------------------------------

Wed May 13 21:03:23 EDT 1998
(Raster) 
Moved everything to autoconf/automake.
Have done piles of the basic work on E 0.14
Now things get serious with keeping a ChangeLog and stuff.

-------------------------------------------------------------------------------

Thu May 14 21:43:41 EDT 1998
(Raster) 
Fixed some raising/lowering bugs for desktops (if 3 desktops were up the top
one would dissapear behind the others when you moved a window that was on
that desktop).
Now E handles multi-depth servers fully - instead of not setting a root pixmap
at all now it inits Imlib especialy for the root visual if the root visual
doesn't match Imlib's chosen visual, and thus can set the bg on the root
window even if it's a different visual to what E normally uses.
Alo created a few more backgrounds for desktops to look cleaner and show off
a bit more.

-------------------------------------------------------------------------------

Thu May 14 23:44:31 EDT 1998
(Raster)
Added STICK action to make windows stick/normal again (toggle it) and made
sticky windows work (ie stick ABOVE every desktop) and not have anything
overlap them.. except other sticky windows. :) Changed internal bindings to
alt-left and alt-right arrow. Added a "slide back in place" action for
sliding the current active desktop back shut - bound this to alt-down arrow.

-------------------------------------------------------------------------------
