@@ -1,22 +1,19 @@
-config.h*
-.icons
 Makefile
 Makefile.in
 aclocal.m4
-config.status
-config.log
 config.cache
+config.guess
+config.h
+config.h.in
+config.log
+config.rpath
+config.status
+config.sub
 configure
-econfig.h
-econfig.h.in
 stamp-h
 stamp-h.in
-confdefs.h
-config.sub
 ltconfig
 ltmain.sh
-config.guess
-cat-id-tbl.c
 enlightenment.pot
 enlightenment*.tar.gz
 ABOUT-NLS
@@ -24,3 +21,4 @@ m4
 autom4te*.cache
 CommitLog
 stamp-h1
+mkinstalldirs
