@@ -1,15 +1,11 @@
-.icons
 Makefile
 Makefile.in
 Makefile.in.in
-.deps
-.libs
 stamp-*
 *.gmo
 POTFILES
 cat-id-tbl.c
 enlightenment.pot
-Makevars
 Rules-quot
 boldquot.sed
 en@boldquot.header
